@@ -1,5 +1,8 @@
 2002-11-29  olicha  <olivier.chapuis@free.fr>
 
+	* acinclude.m4:
+	Defined AM_PATH_PROG_WITH_TEST
+
 	* configure.in:
 	* Makefile.am:
 	Fixed two missprints
